--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ logging.level.org.atmosphere = warn
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
 # MariaDB configuration.
-spring.datasource.url = jdbc:mariadb://localhost:3306/vaadinstart
-spring.datasource.username = vaadinstart
-spring.datasource.password = vaadinstart
+spring.datasource.url = jdbc:mariadb://peniswal.ddns.net:3306/WorkTimer
+spring.datasource.username = ${DATABASE_USER}
+spring.datasource.password = ${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto = update
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
