--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8080}
-logging.level.org.atmosphere = warn
+logging.level.org.atmosphere = info
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
@@ -7,7 +7,7 @@ vaadin.launch-browser=true
 spring.datasource.url = jdbc:mariadb://peniswal.ddns.net:3306/WorkTimer
 spring.datasource.username = ${DATABASE_USER}
 spring.datasource.password = ${DATABASE_PASSWORD}
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 vaadin.allowed-packages = com.vaadin,org.vaadin,com.home.tim.worktimer
